# MoonZoon

./: Cargo.toml
crates/local_serde/: Cargo.toml
crates/local_serde/src/: lib.rs
crates/local_serde_derive/: Cargo.toml
crates/local_serde_derive/src/: attributes.rs  lib.rs  local_deserialize.rs  local_serialize.rs
crates/moonlight/: Cargo.toml
crates/moonlight/src/: cor_id.rs  entity_id.rs  lib.rs
crates/mzoon/src/: build_frontend.rs
crates/zoon/: Cargo.toml
crates/zoon/src/: element.rs  lib.rs
crates/zoon/src/connection/: sse.rs
crates/zoon/src/element/raw_el/: raw_el_wrapper.rs
docs/: development.md
examples/counter/frontend/src/: main.rs
examples/time_tracker/: MoonZoon.toml
examples/time_tracker/shared/src/: lib.rs  time_blocks.rs  time_tracker.rs
examples/todomvc/: MoonZoon.toml
examples/todomvc/frontend/: index.html  index.js
examples/wasm_components/: Cargo.toml
examples/wasm_components/frontend/: Cargo.toml
examples/wasm_components/frontend/components/calculator/: Cargo.toml  README.md  calculator_plugin.wasm
examples/wasm_components/frontend/components/calculator/src/: lib.rs
examples/wasm_components/frontend/src/: main.rs
