[package]
name = "frontend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon.workspace = true
anyhow = { version = "1.0.66", features = ["std"], default-features = false }
wasm_component_layer = "0.1.17"
# wasm_runtime_layer = "0.4.0"
js_wasm_runtime_layer = "0.4.0"
