[package]
name = "calculator_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.26.0"

# Cargo recommends to set it in the workspace root, but it isn't possible:
# https://github.com/rust-lang/cargo/issues/9330
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
